# v4r_libraries

./: #CMakeLists.txt#  CMakeLists.txt  README.md  manifest.xml  package.xml
.svn/: all-wcprops  entries
.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base
v4r/: CMakeLists.txt
v4r/.svn/: all-wcprops  entries
v4r/armarker/: CMakeLists.txt
v4r/armarker/.svn/: all-wcprops  entries
v4r/armarker/AR/.svn/: all-wcprops  entries
v4r/armarker/examples/.svn/: all-wcprops  entries
v4r/armarker/examples/Data/: patt.TU
v4r/bayer2rgb/.svn/: all-wcprops  entries
v4r/bayer2rgb/.svn/text-base/: CMakeLists.txt.svn-base
v4r/checkerboard/: CMakeLists.txt
v4r/checkerboard/.svn/: all-wcprops  entries
v4r/checkerboard/.svn/text-base/: CMakeLists.txt.svn-base
v4r/checkerboard/example/.svn/: all-wcprops  entries
v4r/colors/.svn/: all-wcprops  entries
v4r/colors/.svn/text-base/: CMakeLists.txt.svn-base  colors.cpp.svn-base  colors.h.svn-base
v4r/colors/examples/: CMakeLists.txt
v4r/colors/examples/.svn/: all-wcprops  entries
v4r/cvextensions/.svn/: all-wcprops  entries
v4r/cvextensions/.svn/text-base/: CMakeLists.txt.svn-base  operator_cv.h.svn-base
v4r/geometry/: line.h  pose.h  structs_clic.h
v4r/geometry/.svn/: all-wcprops  entries
v4r/geometry/camera/: camerageometrybase.h
v4r/geometry/examples/: CMakeLists.txt
v4r/rosextensions/.svn/: all-wcprops  entries
v4r/utils/: CMakeLists.txt  timehdl.h
v4r/utils/.svn/: all-wcprops  entries
v4r/utils/.svn/text-base/: CMakeLists.txt.svn-base  timehdl.cpp.svn-base
(+15 files in other folders)
