<package>
  <name>v4r_libraries</name>
  <description>
     v4r_libraries
  </description>
  <maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>
  <version>1.0.0</version>
  <author>Markus Bader</author>
  <license>BSD</license>

  <url>http://ros.org/wiki/v4r_libraries</url>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>"opencv2"</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>opencv2</run_depend>
  <!-- <rosdep name="boost" /> -->
  <export>
    <cpp cflags="-I${prefix}/" lflags="-L${prefix}/lib" />
# -lv4rcamerageometry -lv4rcanny -lv4rcheckerboard -lv4rcmvision -lv4rcolors -lv4rcontour
# -lv4rfw -lv4rgeometry -lv4rhl -lv4rlinedetector -lv4rmarker -lv4rmcl -lv4rutils -lv4redgelinker
  </export>
</package>
